--- a/src/css/custom_properties/_custom_properties_set.scss
+++ b/src/css/custom_properties/_custom_properties_set.scss
@@ -47,6 +47,7 @@ body,
 	color: var(--body-color);
 	font-family: var(--font-family-base);
 	font-size: var(--font-size-base);
+	overflow-x: hidden;
 }
 
 // Buttons
