Various minor changes

--- a/src/css/minium/_variables.scss
+++ b/src/css/minium/_variables.scss
@@ -1,5 +1,10 @@
 $color-fg: #5c5e5e;
 $color-fg-alt: #7f848d;
+
+// a lighter shadow for cards specific to Creative
+
+$color-shadow-creative: #d8d7d7;
+
 $color-bg: #fff;
 $color-bg-medium: #fcfcfc;
 $color-bg-alt: #ffffff;
