Error in variable definition

--- a/src/css/_custom.scss
+++ b/src/css/_custom.scss
@@ -155,7 +155,7 @@ hr {
 
 .drop-question {
 	padding: 10px;
-	border: $brand-primary 1px solid;
+	border: $primary 1px solid;
 	font-weight: bold;
 	margin-bottom: 5px;
 }
